# lrc-db-builder

./: .gitignore  Cargo.toml  README.md  run_log.txt
.github/workflows/: build-lrclib.yml  build.yml
scripts/: filter_lyrics.py
src/: main.rs
