[package]
name = "lrc-db-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
brotli = "6.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
